radio button complete

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   align-items: center;
   font-family: 'Courier New', Courier, monospace;
 }
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Courier New', Courier, monospace;
+  margin-bottom: 0;
+}
+
+.App{
+  height: 100vh;
+}
